--- a/OneDrive/Documents/NetBeansProjects/Test/nbproject/project.properties
+++ b/OneDrive/Documents/NetBeansProjects/Test/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Test
+application.title=Card
 application.vendor=salom
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Test.jar
+dist.jar=${dist.dir}/Card.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Test
+dist.jlink.output=${dist.jlink.dir}/Card
 endorsed.classpath=
 excludes=
 includes=**
@@ -73,8 +73,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Test
-main.class=package0.NewFXMain
+jlink.launcher.name=Card
+main.class=fxml.NewFXMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
