ajout des descriptions de carte et supression de la couleur jaune

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,7 @@ javac.compilerargs=--module-path %PATH_TO_FX%\\lib --add-modules javafx.controls
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=\
-    ${libs.JavaFX21.classpath}
+    ${libs.Javafx21.classpath}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
