--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\salom\\AppData\\Roaming\\NetBeans\\24\\build.properties
+user.properties.file=C:\\Users\\susuf\\AppData\\Roaming\\NetBeans\\19\\build.properties
